feat(wip): integrate Monaco Editor and QuillJS with auto-save functionality
- Add MonacoEditor component with 13+ language support
- Add QuillEditor component with dark theme and rich formatting
- Implement useAutoSave and useDebounce hooks for seamless editing
- Add LanguageSelector with programming language switching
- Add update_card Rust command for editor data persistence
- Integrate editors into ProblemCard with save indicators
- Add Ctrl+S keyboard shortcuts and visual feedback
- Support theme switching (vs-dark/vs-light for Monaco, custom dark theme for Quill)

Features working:
✅ Monaco Editor with syntax highlighting and IntelliSense
✅ Auto-save every 3 seconds with loading indicators
✅ Manual save with Ctrl+S keyboard shortcut
✅ Language selection and card navigation
✅ Dark/light theme switching

Known issues:
❌ QuillJS not working properly - may have initialization/rendering issues
❌ Rich text editor functionality needs debugging
- QuillJS dark theme may need styling refinements
- Editor state sync during rapid card switching needs testing
- Performance optimization needed for large content
- Error handling for save failures could be improved

Status: WIP - Monaco Editor functional, QuillJS needs fixes

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -23,6 +23,7 @@ rusqlite = { version = "0.32.1", features = ["bundled"] }
 
 # Utility dependencies (minimal)
 uuid = { version = "1.11.0", features = ["v4"] }
+chrono = { version = "0.4", features = ["serde"] }
 
 [features]
 # This feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
