--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-global-shortcut": "^2.3.0",
     "@tauri-apps/plugin-shell": "^2",
+    "@types/react-resizable": "^3.0.8",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-h5-audio-player": "^3.10.0",
+    "react-resizable": "^3.0.5",
     "react-router-dom": "^6.28.0",
     "uuid": "^10.0.0",
     "zustand": "^5.0.2"
