--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@monaco-editor/react": "^4.6.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-global-shortcut": "^2.3.0",
     "@tauri-apps/plugin-shell": "^2",
@@ -24,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-h5-audio-player": "^3.10.0",
     "react-resizable": "^3.0.5",
+    "react-resizable-panels": "^3.0.4",
     "react-router-dom": "^6.28.0",
     "uuid": "^10.0.0",
     "zustand": "^5.0.2"
