feat: implement resizable layout system with proper panel collapse behavior
- Replace fixed layout with react-resizable-panels for consistent UI
- Add app-level resizable sidebar with navigation (Dashboard, Analytics, etc.)
- Create proper context separation between app layout and workspace layout
- Fix Problem Description panel collapse to actually reduce space allocation
- Implement smart context detection for cross-component compatibility
- Add attachment file gitignore rules and remove unused database files
- Update workspace panels to use dynamic sizing instead of static defaults
- Ensure Monaco editor and notes get proper space when panels collapse

--- a/.gitignore
+++ b/.gitignore
@@ -52,6 +52,10 @@ recordings/
 # Backup files from previous implementation
 localResources_backup/
 
+# Attachment files (keep folder structure but ignore contents)
+src-tauri/attachments/*/*/*
+!src-tauri/attachments/*/
+
 # Development and testing utilities
 add-sample-data.js
 check-database-status.js
