feat: implement real-time audio recording system with environment-aware file management
- Replace dummy WAV generation with real microphone input capture using cpal
- Add thread-based audio stream management to handle Send+Sync constraints
- Implement pause/resume functionality with state-aware audio processing
- Add comprehensive audio format support (F32, I16, U16) with proper conversion
- Create GlobalAudioPlayer component for recording playback interface
- Add RecordingHistory modal with integrated audio player functionality
- Implement environment-aware path resolution for dev-data vs app-data directories
- Update all file operations to use centralized path management system
- Add proper audio session tracking with database persistence
- Clean up legacy attachment directory structure and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -42,8 +42,8 @@ data/
 *.db-shm
 *.db-wal
 
-# Audio recordings
-recordings/
+# Development data (ignored in version control)
+dev-data/
 
 # Temporary files
 *.tmp
@@ -51,10 +51,6 @@ recordings/
 
 # Backup files from previous implementation
 localResources_backup/
-
-# Attachment files (keep folder structure but ignore contents)
-src-tauri/attachments/*/*/*
-!src-tauri/attachments/*/
 
 # Development and testing utilities
 add-sample-data.js
