--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -27,6 +27,13 @@ anyhow = "1.0"
 tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
 base64 = "0.22"
 
+# Audio recording dependencies
+cpal = "0.15"
+hound = "3.5"
+
+# Directory utilities
+dirs = "5.0"
+
 [features]
 # This feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
 # If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
