fix: resolve production audio recording failures and add microphone permissions
- Fix PathResolver bundle identifier mismatch (com.dsalearning.app → com.dsalearning.dsaapp)
- Add proper Info.plist with NSMicrophoneUsageDescription for macOS permissions
- Fix audio loading in production by using PathResolver for absolute paths
- Add debug commands for production troubleshooting and path verification
- Update .gitignore to exclude development utilities and debugging files
- Migrate existing recordings and images to correct Application Support directory

Resolves critical production issue where audio recordings were silent due to:
1. Files being saved to different location than where app reads from
2. Missing microphone permission prompts preventing actual audio capture

--- a/.gitignore
+++ b/.gitignore
@@ -182,3 +182,9 @@ $RECYCLE.BIN/
 *.msm
 *.msp
 *.lnk
+
+# Development and debugging files
+ICON_SYSTEM.md
+debug-paths.html
+build-dmg.sh
+BUILD_GUIDE.md
