fix: enhance image deletion with custom confirmation modal and robust error handling
- Fix Tauri command parameter structure for delete_problem_image function
- Replace unreliable browser confirm() with custom ConfirmationModal component
- Enhance UX in edit mode: both image click and delete button trigger confirmation
- Add comprehensive debugging and error handling throughout deletion process
- Improve .gitignore with additional build artifacts and cache patterns
- Add proper accessibility support with ARIA labels and keyboard navigation
- Implement visual feedback with hover states and transition animations

--- a/.gitignore
+++ b/.gitignore
@@ -95,6 +95,16 @@ jspm_packages/
 .cache
 .parcel-cache
 
+# Vite cache and build artifacts
+.vite/
+.rollup.cache/
+
+# Turborepo cache
+.turbo/
+
+# SWC cache
+.swc/
+
 # Next.js build output
 .next
 
@@ -125,6 +135,22 @@ temp/
 src-tauri/target/
 src-tauri/gen/
 WixTools/
+
+# Tauri build artifacts and bundles
+*.app
+*.deb
+*.AppImage
+*.dmg
+*.msi
+*.msm
+*.msp
+*.rpm
+*.pkg
+bundle/
+
+# Rust-specific patterns
+**/target/
+**/*.rs.bk
 
 # Database files
 *.db
@@ -166,6 +192,32 @@ user-content/
 
 # Claude AI context files (development assistance)
 .claude/
+
+# Additional IDE and editor patterns
+.fleet/
+.vscode-insiders/
+.history/
+**/.vscode/settings.json
+**/.vscode/launch.json
+**/.vscode/extensions.json
+
+# JetBrains IDEs (additional patterns)
+.idea/
+*.iml
+*.ipr
+*.iws
+out/
+
+# Visual Studio
+.vs/
+*.suo
+*.user
+*.sln.docstates
+
+# Additional cache directories
+.cache/
+.temp/
+.tmp/
 
 # MacOS specific
 .AppleDouble
