chore: add CLAUDE.md to .gitignore
- Add project-specific Claude AI documentation to ignored files
- Maintains clean repository without tracking local AI configuration

--- a/.gitignore
+++ b/.gitignore
@@ -207,6 +207,7 @@ verify-migration.cjs
 # =============================================================================
 # Claude AI context and backup files
 .claude/
+CLAUDE.md
 .claude-backup/
 
 # =============================================================================
