fix: Resolve TypeScript build errors with comprehensive timer and dependency fixes
This commit addresses multiple TypeScript compilation issues that were preventing successful builds:

**Dependency Management:**
- Install missing react-h5-audio-player@3.10.1 package that was referenced but not in package.json
- Add @types/node@24.3.0 to support process.env usage in Node.js environments
- Update package-lock.json with latest dependency resolutions

**Timer Type Conflicts Resolution:**
- Replace all Node.js setTimeout/setInterval with window.setTimeout/setInterval across 8+ components
- Fix timer ref types from NodeJS.Timeout to number for browser compatibility
- Affected components: WorkspaceHeader, QuillEditor, ProblemAutocomplete, TagModal,
  useSolutionCard, useHeaderResponsiveness, useRecording, useTimer, useWindowSize

**TypeScript Configuration Enhancements:**
- Add "node" to types array in tsconfig.json to support Node.js type definitions
- Create src/types/browser-globals.d.ts for browser-specific global type declarations
- Create src/types/css-modules.d.ts to handle CSS module imports without type errors

**Code Quality Improvements:**
- Add proper CardStatus type casting in solutionCardHelpers.ts
- Enhance process.env safety checks with undefined guards
- Clean up trailing whitespace and formatting issues

**Build System Maintenance:**
- Update .gitignore to exclude generated icon files while preserving essential Tauri icons
- Maintain backwards compatibility for existing timer functionality
- Preserve all existing business logic while fixing type issues

These changes ensure clean TypeScript compilation while maintaining full functionality across all timer-based features, audio components, and build processes.

--- a/.gitignore
+++ b/.gitignore
@@ -195,6 +195,11 @@ $RECYCLE.BIN/
 *.icns
 ICON_SYSTEM.md
 
+# Generated icon files (keep only essential Tauri icons)
+src-tauri/icons/*.png
+!src-tauri/icons/icon.png
+!src-tauri/icons/32x32.png
+
 # Development documentation and guides
 BUILD_GUIDE.md
 debug-paths.html
