--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "quill": "^2.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.10.1",
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^3.0.4",
     "react-router-dom": "^6.28.0",
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@tauri-apps/cli": "^2",
+    "@types/node": "^24.3.0",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/uuid": "^10.0.0",
