Fix critical solution card state synchronization bug
- Resolve React state race condition where UI reverted to original card after successful solution creation
- Modify useSolutionCard toggle function to return API result preventing stale state reads
- Update type definition to reflect new Promise<{ isViewingSolution: boolean; card: SolutionCard | null }> return type
- Fix 4 JSX syntax errors in ProblemCard.tsx (missing closing > brackets)
- Use API result directly instead of potentially stale React state for UI updates
- Enhance .gitignore with IDE workspace files and vite.config.js.timestamp patterns
- Add proper error propagation with throw in catch block

This resolves the critical bug where solution cards were created successfully in database but frontend showed original card due to asynchronous state synchronization issues.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ bundle/
 .vite/
 .rollup.cache/
 vite.config.ts.timestamp-*
+vite.config.js.timestamp-*
 
 # TypeScript build cache
 *.tsbuildinfo
@@ -227,6 +228,10 @@ verify-migration.cjs
 .claude/
 CLAUDE.md
 .claude-backup/
+
+# IDE and editor auto-generated files
+*.workspace
+*.code-workspace
 
 # =============================================================================
 # Backup and Archive Files
