fix: Remove missing debug module to fix compilation errors
- Remove debug module reference from commands/mod.rs
- Remove debug command handlers from main.rs
- Add .tours/ to .gitignore to exclude VS Code tour files

Fixes compilation errors related to missing debug.rs file.

--- a/.gitignore
+++ b/.gitignore
@@ -233,6 +233,9 @@ CLAUDE.md
 *.workspace
 *.code-workspace
 
+# Code tour files
+.tours/
+
 # =============================================================================
 # Backup and Archive Files
 # =============================================================================
