feat: Add comprehensive bulk deletion with file system cleanup
Implement complete bulk problem deletion functionality with comprehensive
data cleanup including physical file deletion from disk.

## New Features
- **Bulk Delete Button**: Added red "Delete" button to Bulk Selection Toolbar
- **Safety-First Confirmation**: Requires typing "DELETE" to confirm dangerous operations
- **Physical File Cleanup**: Automatically deletes audio recordings and images from disk
- **Detailed Preview**: Shows exactly what will be deleted before confirmation
- **Progress Tracking**: Visual feedback during deletion process

## Frontend Implementation (React/TypeScript)
- **Dashboard.tsx**:
  - Add TrashIcon import and bulk delete button with red danger styling
  - Implement handleBulkDelete() and handleBulkDeleteConfirm() handlers
  - Add showBulkDeleteDialog state management
  - Integrate BulkDeleteDialog component with selected problems data

- **BulkDeleteDialog.tsx** (NEW):
  - Safety-first confirmation dialog requiring "DELETE" input
  - Comprehensive preview of deletion impact:
    - Problem count and card count
    - Audio recordings (with file deletion warning)
    - Time sessions, tags, connections, images
  - Progress indicator with error handling
  - Problem list preview (first 5 or summary for larger selections)

## Backend Implementation (Rust/Tauri)
- **database.rs**:
  - Add `delete_problems_bulk` command for batch processing
  - Implement error handling with detailed logging
  - Process deletions individually with failure isolation

- **database/mod.rs**:
  - Add `delete_problem_with_files()` method for enhanced deletion
  - Add `delete_file_safely()` for cross-platform file cleanup
  - Handle multiple path formats (dev-data, app-data, absolute, relative)
  - Query recording and image file paths before database deletion
  - Graceful error handling for missing files

- **main.rs**:
  - Register delete_problems_bulk command in Tauri handler

## File System Integration
- 

--- a/.gitignore
+++ b/.gitignore
@@ -221,6 +221,9 @@ add-sample-data.js
 check-database-status.js
 verify-migration.cjs
 
+# Examples and test data
+examples/
+
 # =============================================================================
 # AI and Development Tools
 # =============================================================================
