feat: Add comprehensive tag support to TXT problem import system
This commit enhances the TXT problem import functionality with proper tag handling:

BACKEND IMPROVEMENTS:
- Add tag creation logic in import_problems_from_txt() function
- Implement automatic tag association with imported problems
- Add error handling for tag creation failures without failing entire import
- Separate tags from topics in parsing logic for better data organization

DATA MODEL UPDATES:
- Add tags field to ParsedProblem struct
- Initialize tags as separate Vec<String> in ParsedProblem::new()
- Update set_problem_field() to handle tags independently from topics

DEVELOPMENT TOOLS:
- Add debug file patterns to .gitignore (**/debug/, **/*debug*.txt)
- Exclude development trace files from version control
- Maintain clean repository without debugging artifacts

This enhancement allows users to import problems with both topics (for categorization)
and tags (for flexible labeling) from TXT format files, providing better organization
and searchability of problem collections.

Related to: TXT import format improvements and database schema utilization

--- a/.gitignore
+++ b/.gitignore
@@ -221,6 +221,11 @@ add-sample-data.js
 check-database-status.js
 verify-migration.cjs
 
+# Debug files and development traces
+**/debug/
+**/*debug*.txt
+**/dev-data/debug/
+
 # Examples and test data
 examples/
 # =============================================================================
