--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-resizable": "^3.0.5",
     "react-resizable-panels": "^3.0.4",
     "react-router-dom": "^6.28.0",
+    "readline-sync": "^1.4.10",
     "uuid": "^10.0.0",
     "zustand": "^5.0.2"
   },
