chore: Update .gitignore to exclude migration scripts
Add explicit patterns to exclude environment-specific migration scripts
from version control, reinforcing the localResources/ exclusion.

## Changes
- Add apply-*-migration.* pattern
- Add *-migration.js and *-migration.cjs patterns
- Document rationale for migration script exclusion

## Context
Migration scripts contain environment-specific paths and database
locations that vary between development and production environments.
These scripts should remain in localResources/ for local use only.

--- a/.gitignore
+++ b/.gitignore
@@ -221,6 +221,11 @@ add-sample-data.js
 check-database-status.js
 verify-migration.cjs
 
+# Environment-specific migration scripts (moved to localResources)
+apply-*-migration.*
+*-migration.js
+*-migration.cjs
+
 # Debug files and development traces
 **/debug/
 **/*debug*.txt
