feat: COMPREHENSIVE tag filtering system with advanced sorting capabilities
🎯 **Core Feature**: Multi-tag filtering with OR logic for enhanced problem discovery
- Users can select multiple tags to filter problems (shows problems with ANY selected tag)
- Visual tag management with problem counts and category grouping
- Seamless integration with existing search functionality

🔧 **Backend Implementation** (Rust/Tauri):
- Add `filter_problems_by_tags` function in database module with OR logic SQL query
- Implement `filter_problems_by_tags` Tauri command for frontend integration
- Register new command in main.rs for proper API exposure
- Use existing `convert_problem_to_frontend` for consistent data formatting

🎨 **Frontend Implementation** (React/TypeScript):
- Create comprehensive `TagFilterModal` component with:
  * Multi-select tag interface with checkboxes and visual feedback
  * Advanced sorting: Name (A-Z/Z-A), Problem Count (less/more), Category grouping
  * Real-time search/filter within available tags
  * Select All/Clear operations with accurate counts
  * Category-based color coding and visual organization

- Dashboard integration:
  * Add "Tags" button as 4th sort option with active filter badge
  * Display active tag filters with individual removal capabilities
  * Clear all filters functionality
  * Combined search + tag filtering workflow

📊 **Sorting Capabilities**:
- **Name**: Alphabetical sorting with direction toggle
- **Problem Count**: Sort by tag usage frequency (key feature for discovering popular/rare tags)
- **Category**: Group by tag categories with subcategory sorting
- Click-to-toggle direction (asc/desc) matching dashboard behavior

🔄 **User Experience**:
- Discover all available tags and their usage patterns
- Focus study sessions on specific topics through tag combination
- Visual feedback: selected tags, problem counts, category colors
- Smooth animations and responsive design
- Maintains existing search functionality

💡 **Key Benefits**:

--- a/.gitignore
+++ b/.gitignore
@@ -247,6 +247,9 @@ CLAUDE.md
 
 # Code tour files
 .tours/
+
+# Development notes and documentation
+.notes/
 # =============================================================================
 # Backup and Archive Files
 # =============================================================================
