feat: Comprehensive solution card debugging and logging infrastructure
## Goal
Address persistent issue where answer/solution card content would overwrite regular card
content when switching modes. The problem involved complex race conditions between multiple
state management systems, requiring extensive debugging infrastructure to identify and solve.

## Problem Analysis
The core issue was a three-way conflict between:
1. Solution card toggle callbacks overriding cached content
2. useEffect hooks loading corrupted database content
3. Race conditions between state updates and mode transitions

## New Classes and Utilities Created

### Debugging Infrastructure
1. **answerCardLogger.ts** (src/utils/answerCardLogger.ts)
   - Specialized logger for answer card state transitions
   - Tracks mode switches, content changes, and save operations
   - Provides detailed operation logs with timestamps and context
   - Methods: logAnswerModeEnter, logAnswerModeExit, logAnswerModeReopen, logAnswerAutoSave

2. **comprehensiveLogger.ts** (src/utils/comprehensiveLogger.ts)
   - Full-stack logging system covering frontend, backend, and database operations
   - Implements buffered writing for performance optimization
   - Database verification capabilities to confirm save operations
   - Methods: logFrontendOperation, logBackendCall, logDatabaseVerification, logAnswerCardAutoSave

### State Management Hooks
3. **useCardModeStateMachine.ts** (src/hooks/useCardModeStateMachine.ts)
   - Finite state machine for managing card mode transitions
   - States: REGULAR, ANSWER with transition states (IDLE, TRANSITIONING)
   - Prevents race conditions during mode switches
   - Provides atomic state transitions with validation

4. **useStateValidationGuards.ts** (src/hooks/useStateValidationGuards.ts)
   - Runtime validation system for state consistency
   - Validates transitions between REGULAR and ANSWER modes
   - Captures state snapshots for debugging
   - Prevents invalid state combinations


--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,10 @@ coverage/
 .nyc_output
 test-results/
 
+# Debug and testing documentation
+ANSWER_CARD_FIX_TESTING_PLAN.md
+ANSWER_CARD_RACE_CONDITION_FIX.md
+
 # =============================================================================
 # Operating System Files
 # =============================================================================
