chore: Add backup files to gitignore
- Added ProblemCard.backup.tsx to gitignore
- Added pattern for all *.backup.tsx and *.backup.ts files
- Prevents temporary debugging backup files from being tracked

--- a/.gitignore
+++ b/.gitignore
@@ -168,6 +168,11 @@ test-results/
 ANSWER_CARD_FIX_TESTING_PLAN.md
 ANSWER_CARD_RACE_CONDITION_FIX.md
 
+# Backup files from debugging
+src/pages/ProblemCard.backup.tsx
+*.backup.tsx
+*.backup.ts
+
 # =============================================================================
 # Operating System Files
 # =============================================================================
