chore: add .continue/ and docs/analytics-component.puml to gitignore
- Exclude AI development tool files (.continue/)
- Exclude PlantUML documentation files (docs/analytics-component.puml)

--- a/.gitignore
+++ b/.gitignore
@@ -249,6 +249,10 @@ examples/
 .claude/
 CLAUDE.md
 .claude-backup/
+.continue/
+
+# Documentation and diagrams
+docs/analytics-component.puml
 
 # IDE and editor auto-generated files
 *.workspace
